--- a/embedding_interactive_maps_to_ipython_notebook.ipynb
+++ b/embedding_interactive_maps_to_ipython_notebook.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:ed8f1aa5fd84a977302cf05a395591cb284972168240a7e0b6f9a6992aeb23ab"
+  "signature": "sha256:1b34905fd92a445bdd9ef158776dbf3d90e6a3195967c5545d95073b6706fa87"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -334,7 +334,7 @@
       "\n",
       "In order to make the map interactive, we'll use IPython's [interact()](http://nbviewer.ipython.org/github/ipython/ipython/blob/2.x/examples/Interactive%20Widgets/Using%20Interact.ipynb) function that takes a callback function and an arbitrary list of parameters that can either be fixed values or widgets. Whenever a widget is updated, the callback function is called.\n",
       "\n",
-      "Our callback function display_map, makes a request to the USGS API, creates a Pandas DataFrame from the CSV response, creates a Basemap map, and plots the geolocical events onto the map. The latitude, longitude, radius, start date, end date and minimum magnitude parameters are presented as widgets. The start date and end date use the custom date selection widget that was defined above."
+      "Our callback function display_map, makes a request to the USGS API, creates a Pandas DataFrame from the CSV response, creates a Basemap map, and plots the geological events onto the map. The latitude, longitude, radius, start date, end date and minimum magnitude parameters are presented as widgets. The start date and end date use the custom date selection widget that was defined above."
      ]
     },
     {
